build: change a bunch of tsconfig files to make TypeScript happy

--- a/packages/config/maintenance/tsconfig.json
+++ b/packages/config/maintenance/tsconfig.json
@@ -1,6 +1,15 @@
 {
 	"extends": "../tsconfig.json",
-	"compilerOptions": {
-		"rootDir": "../../../"
-	}
+	"compilerOptions": {},
+	"references": [
+		{
+			"path": "../../core/tsconfig.build.json"
+		},
+		{
+			"path": "../../shared/tsconfig.build.json"
+		},
+	],
+	"include": [
+		"**/*.ts"
+	]
 }
