--- a/packages/zwave-js/tsconfig.build.json
+++ b/packages/zwave-js/tsconfig.build.json
@@ -1,8 +1,9 @@
+// tsconfig for building - only applies to the src directory
 {
-	"extends": "../../tsconfig.build.json",
+	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"rootDir": "./src",
-		"outDir": "./build",
+		"rootDir": "src",
+		"outDir": "build",
 	},
 	"references": [
 		{
@@ -20,6 +21,5 @@
 	],
 	"exclude": [
 		"src/**/*.test.ts",
-		"build/"
 	]
 }
