--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -45,7 +45,7 @@
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
     "clean": "npm run build -- --clean",
-    "watch": "npm run build -- --watch",
+    "watch": "npm run build -- --watch --pretty",
     "lint:config": "gulp lintConfigFiles",
     "config": "ts-node maintenance/importConfig.ts"
   }
