--- a/packages/config/tsconfig.build.json
+++ b/packages/config/tsconfig.build.json
@@ -1,8 +1,9 @@
+// tsconfig for building - only applies to the src directory
 {
-	"extends": "../../tsconfig.build.json",
+	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"rootDir": "./src",
-		"outDir": "./build",
+		"rootDir": "src",
+		"outDir": "build",
 	},
 	"references": [
 		{
@@ -16,6 +17,6 @@
 		"src/**/*.ts"
 	],
 	"exclude": [
-		"src/**/*.test.ts"
+		"src/**/*.test.ts",
 	]
 }
