--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,6 +40,6 @@
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
     "clean": "npm run build -- --clean",
-    "watch": "npm run build -- --watch"
+    "watch": "npm run build -- --watch --pretty"
   }
 }
