--- a/packages/shared/tsconfig.build.json
+++ b/packages/shared/tsconfig.build.json
@@ -1,13 +1,14 @@
+// tsconfig for building - only applies to the src directory
 {
-	"extends": "../../tsconfig.build.json",
+	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"rootDir": "./src",
-		"outDir": "./build",
+		"rootDir": "src",
+		"outDir": "build",
 	},
 	"include": [
 		"src/**/*.ts"
 	],
 	"exclude": [
-		"src/**/*.test.ts"
+		"src/**/*.test.ts",
 	]
 }
