test: fix test setup

--- a/packages/zwave-js/package.json
+++ b/packages/zwave-js/package.json
@@ -5,7 +5,40 @@
   "keywords": [],
   "main": "index.js",
   "types": "index.d.ts",
-  "files": [],
+  "files": [
+    "CommandClass.d.ts",
+    "CommandClass.d.ts.map",
+    "CommandClass.js",
+    "CommandClass.js.map",
+    "Controller.d.ts",
+    "Controller.d.ts.map",
+    "Controller.js",
+    "Controller.js.map",
+    "Driver.d.ts",
+    "Driver.d.ts.map",
+    "Driver.js",
+    "Driver.js.map",
+    "Error.d.ts",
+    "Error.d.ts.map",
+    "Error.js",
+    "Error.js.map",
+    "Node.d.ts",
+    "Node.d.ts.map",
+    "Node.js",
+    "Node.js.map",
+    "Utils.d.ts",
+    "Utils.d.ts.map",
+    "Utils.js",
+    "Utils.js.map",
+    "Values.d.ts",
+    "Values.d.ts.map",
+    "Values.js",
+    "Values.js.map",
+    "index.d.ts",
+    "index.d.ts.map",
+    "index.js",
+    "index.js.map"
+  ],
   "author": {
     "name": "AlCalzone",
     "email": "d.griesel@gmx.net"
