Respect mandatory CCs defined for the device class (#681)
* feat(config): define device classes as JSON

* build: change a bunch of tsconfig files to make TypeScript happy

* feat: move Z-Wave device classes to config file, respect mandatory CCs

* fix(driver): load device classes at the start

* build: run watch task in parallel

* feat: add mandatory CCs after the interview and deserialization

* chore: update changelog [skip ci]

* test: fix test setup

* test: fix Node tests

* test: add test for adding mandatory CCs in Node constructor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,14 +17,14 @@
 			],
 			"@zwave-js/shared": [
 				"shared/src"
-			],
+			]
 		},
-		"noEmit": true,
-		"declaration": false,
+		"composite": true,
+		"declaration": true,
+		"declarationMap": true,
 		// To enable Babel support
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
-		"isolatedModules": true,
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"noEmitOnError": true,
@@ -50,22 +50,13 @@
 		]
 	},
 	"include": [
+		"packages/**/*.ts",
 		"maintenance/**/*.ts",
-		"test/**/*.ts",
+		"test/**/*.ts"
 	],
 	"exclude": [
+		"**/build/**",
 		"node_modules/**",
 		"packages/**/node_modules"
-	],
-	"references": [
-		{
-			"path": "packages/config/tsconfig.build.json"
-		},
-		{
-			"path": "packages/core/tsconfig.build.json"
-		},
-		{
-			"path": "packages/shared/tsconfig.build.json"
-		},
 	]
 }
