--- a/package.json
+++ b/package.json
@@ -57,9 +57,6 @@
     "@types/yargs": "^15.0.4",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
-    "@zwave-js/config": "^1.0.0",
-    "@zwave-js/core": "^3.8.5",
-    "@zwave-js/shared": "^3.8.5",
     "axios": "^0.19.2",
     "clipboardy": "^2.3.0",
     "commitizen": "^4.0.4",
@@ -92,7 +89,7 @@
     "zwave-js": "file:packages\\zwave-js"
   },
   "scripts": {
-    "watch": "cd packages/zwave-js && lerna run watch --scope=zwave-js",
+    "watch": "lerna run watch --parallel",
     "test:reset": "jest --clear-cache",
     "test:ts": "jest",
     "test:ci": "npm run test:ts -- --runInBand",
