feat: extract the serial port into its own package [WIP]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,23 +22,23 @@
 		"node_modules/": false,
 		"coverage/": false,
 		".*": false,
-		"**/node_modules/": true,
-		"**/*.test.js": true,
-		".nyc_output": true,
-		"**/coverage/": true,
-		"**/*.map": true,
-		"**/zwave-js-*.tgz": true,
-		"cache": true,
+		"**/node_modules/": false,
+		"**/*.test.js": false,
+		".nyc_output": false,
+		"**/coverage/": false,
+		"**/*.map": false,
+		"**/zwave-js-*.tgz": false,
+		"cache": false,
 		"build": false,
-		"*.d.ts": true,
-		"*.map": true,
-		"CommandClass.js": true,
-		"Controller.js": true,
-		"Driver.js": true,
-		"Error.js": true,
-		"Node.js": true,
-		"Values.js": true,
-		"index.js": true,
+		"*.d.ts": false,
+		"*.map": false,
+		"CommandClass.js": false,
+		"Controller.js": false,
+		"Driver.js": false,
+		"Error.js": false,
+		"Node.js": false,
+		"Values.js": false,
+		"index.js": false,
 		"packages/core/Capabilities.js": false,
 		"packages/core/Consts.js": false,
 		"packages/core/Error.js": false,
@@ -48,9 +48,9 @@
 		"packages/core/Util.js": false,
 		"packages/core/Values.js": false,
 		"packages/core/index.js": false,
-		"**/build": true,
-		"**/*.tsbuildinfo": true,
-		"Utils.js": true,
+		"**/build": false,
+		"**/*.tsbuildinfo": false,
+		"Utils.js": false,
 		"packages/core/Capabilities.d.ts": false,
 		"packages/core/Consts.d.ts": false,
 		"packages/core/Error.d.ts": false,
@@ -60,22 +60,22 @@
 		"packages/core/Util.d.ts": false,
 		"packages/core/Values.d.ts": false,
 		"packages/core/index.d.ts": false,
-		"packages/zwave-js/CommandClass.d.ts": true,
-		"packages/zwave-js/CommandClass.js": true,
-		"packages/zwave-js/Controller.d.ts": true,
-		"packages/zwave-js/Controller.js": true,
-		"packages/zwave-js/Driver.d.ts": true,
-		"packages/zwave-js/Driver.js": true,
-		"packages/zwave-js/Error.d.ts": true,
-		"packages/zwave-js/Error.js": true,
-		"packages/zwave-js/Node.d.ts": true,
-		"packages/zwave-js/Node.js": true,
-		"packages/zwave-js/Utils.d.ts": true,
-		"packages/zwave-js/Utils.js": true,
-		"packages/zwave-js/Values.d.ts": true,
-		"packages/zwave-js/Values.js": true,
-		"packages/zwave-js/index.d.ts": true,
-		"packages/zwave-js/index.js": true
+		"packages/zwave-js/CommandClass.d.ts": false,
+		"packages/zwave-js/CommandClass.js": false,
+		"packages/zwave-js/Controller.d.ts": false,
+		"packages/zwave-js/Controller.js": false,
+		"packages/zwave-js/Driver.d.ts": false,
+		"packages/zwave-js/Driver.js": false,
+		"packages/zwave-js/Error.d.ts": false,
+		"packages/zwave-js/Error.js": false,
+		"packages/zwave-js/Node.d.ts": false,
+		"packages/zwave-js/Node.js": false,
+		"packages/zwave-js/Utils.d.ts": false,
+		"packages/zwave-js/Utils.js": false,
+		"packages/zwave-js/Values.d.ts": false,
+		"packages/zwave-js/Values.js": false,
+		"packages/zwave-js/index.d.ts": false,
+		"packages/zwave-js/index.js": false
 	},
 	"files.associations": {
 		"**/config/**/*.json": "jsonc"
