--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@types/node": "^13.13.4",
     "@types/prettier": "^2.0.0",
     "@types/semver": "^7.1.0",
-    "@types/serialport": "^8.0.0",
+    "@types/serialport": "^8.0.1",
     "@types/triple-beam": "^1.3.0",
     "@types/yargs": "^15.0.4",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
@@ -85,6 +85,7 @@
   "dependencies": {
     "@zwave-js/config": "file:packages\\config",
     "@zwave-js/core": "file:packages\\core",
+    "@zwave-js/serial": "file:packages\\serial",
     "@zwave-js/shared": "file:packages\\shared",
     "zwave-js": "file:packages\\zwave-js"
   },
