refactor: extract serial module [WIP]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,12 +22,12 @@
 		"node_modules/": false,
 		"coverage/": false,
 		".*": false,
-		"**/node_modules/": false,
-		"**/*.test.js": false,
-		".nyc_output": false,
-		"**/coverage/": false,
-		"**/*.map": false,
-		"**/zwave-js-*.tgz": false,
+		"**/node_modules/": true,
+		"**/*.test.js": true,
+		".nyc_output": true,
+		"**/coverage/": true,
+		"**/*.map": true,
+		"**/zwave-js-*.tgz": true,
 		"cache": false,
 		"build": false,
 		"*.d.ts": false,
@@ -48,8 +48,8 @@
 		"packages/core/Util.js": false,
 		"packages/core/Values.js": false,
 		"packages/core/index.js": false,
-		"**/build": false,
-		"**/*.tsbuildinfo": false,
+		"**/build": true,
+		"**/*.tsbuildinfo": true,
 		"Utils.js": false,
 		"packages/core/Capabilities.d.ts": false,
 		"packages/core/Consts.d.ts": false,
@@ -60,22 +60,39 @@
 		"packages/core/Util.d.ts": false,
 		"packages/core/Values.d.ts": false,
 		"packages/core/index.d.ts": false,
-		"packages/zwave-js/CommandClass.d.ts": false,
-		"packages/zwave-js/CommandClass.js": false,
-		"packages/zwave-js/Controller.d.ts": false,
-		"packages/zwave-js/Controller.js": false,
-		"packages/zwave-js/Driver.d.ts": false,
-		"packages/zwave-js/Driver.js": false,
-		"packages/zwave-js/Error.d.ts": false,
-		"packages/zwave-js/Error.js": false,
-		"packages/zwave-js/Node.d.ts": false,
-		"packages/zwave-js/Node.js": false,
-		"packages/zwave-js/Utils.d.ts": false,
-		"packages/zwave-js/Utils.js": false,
-		"packages/zwave-js/Values.d.ts": false,
-		"packages/zwave-js/Values.js": false,
-		"packages/zwave-js/index.d.ts": false,
-		"packages/zwave-js/index.js": false
+		"packages/zwave-js/CommandClass.d.ts": true,
+		"packages/zwave-js/CommandClass.js": true,
+		"packages/zwave-js/Controller.d.ts": true,
+		"packages/zwave-js/Controller.js": true,
+		"packages/zwave-js/Driver.d.ts": true,
+		"packages/zwave-js/Driver.js": true,
+		"packages/zwave-js/Error.d.ts": true,
+		"packages/zwave-js/Error.js": true,
+		"packages/zwave-js/Node.d.ts": true,
+		"packages/zwave-js/Node.js": true,
+		"packages/zwave-js/Utils.d.ts": true,
+		"packages/zwave-js/Utils.js": true,
+		"packages/zwave-js/Values.d.ts": true,
+		"packages/zwave-js/Values.js": true,
+		"packages/zwave-js/index.d.ts": true,
+		"packages/zwave-js/index.js": true,
+		"node_modules/zwave-js/CommandClass.d.ts": true,
+		"node_modules/zwave-js/CommandClass.js": true,
+		"node_modules/zwave-js/Controller.d.ts": true,
+		"node_modules/zwave-js/Controller.js": true,
+		"node_modules/zwave-js/Driver.d.ts": true,
+		"node_modules/zwave-js/Driver.js": true,
+		"node_modules/zwave-js/Error.d.ts": true,
+		"node_modules/zwave-js/Error.js": true,
+		"node_modules/zwave-js/Node.d.ts": true,
+		"node_modules/zwave-js/Node.js": true,
+		"node_modules/zwave-js/Utils.d.ts": true,
+		"node_modules/zwave-js/Utils.js": true,
+		"node_modules/zwave-js/Values.d.ts": true,
+		"node_modules/zwave-js/Values.js": true,
+		"node_modules/zwave-js/index.d.ts": true,
+		"node_modules/zwave-js/index.js": true,
+		"**/cache": true
 	},
 	"files.associations": {
 		"**/config/**/*.json": "jsonc"
