--- a/packages/zwave-js/tsconfig.build.json
+++ b/packages/zwave-js/tsconfig.build.json
@@ -13,6 +13,9 @@
 			"path": "../core/tsconfig.build.json"
 		},
 		{
+			"path": "../serial/tsconfig.build.json"
+		},
+		{
 			"path": "../shared/tsconfig.build.json"
 		}
 	],
