--- a/packages/zwave-js/tsconfig.json
+++ b/packages/zwave-js/tsconfig.json
@@ -10,8 +10,11 @@
 			"path": "../core/tsconfig.build.json"
 		},
 		{
+			"path": "../serial/tsconfig.build.json"
+		},
+		{
 			"path": "../shared/tsconfig.build.json"
-		}
+		},
 	],
 	"include": [
 		"**/*.ts"
