--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@actions/exec": "^1.0.3",
     "@actions/github": "^2.1.1",
     "@alcalzone/release-script": "^1.6.0",
-    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
@@ -41,7 +40,6 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@fimbul/mithotyn": "^0.21.0",
     "@fimbul/wotan": "^0.21.1",
-    "@types/debug": "4.1.5",
     "@types/fs-extra": "^8.1.0",
     "@types/gulp": "^4.0.6",
     "@types/gulp-sourcemaps": "0.0.32",
@@ -57,6 +55,7 @@
     "@types/yargs": "^15.0.4",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
+    "ansi-colors": "^4.1.1",
     "axios": "^0.19.2",
     "clipboardy": "^2.3.0",
     "commitizen": "^4.0.4",
@@ -73,7 +72,7 @@
     "jest-circus": "^25.4.0",
     "jest-extended": "^0.11.5",
     "lerna": "^3.22.1",
-    "mockdate": "2.0.5",
+    "mockdate": "^3.0.2",
     "prettier": "^2.0.5",
     "semver": "^7.3.2",
     "supports-color": "^7.1.0",
