--- a/packages/serial/package.json
+++ b/packages/serial/package.json
@@ -25,8 +25,10 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
+    "@zwave-js/core": "file:../core",
     "alcalzone-shared": "^2.2.0",
-    "serialport": "^9.0.0"
+    "serialport": "^9.0.0",
+    "winston": "^3.3.2"
   },
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
