--- a/packages/zwave-js/package.json
+++ b/packages/zwave-js/package.json
@@ -64,14 +64,11 @@
     "@sentry/node": "^5.15.5",
     "@zwave-js/config": "file:../config",
     "@zwave-js/core": "file:../core",
+    "@zwave-js/serial": "file:../serial",
     "@zwave-js/shared": "file:../shared",
     "alcalzone-shared": "^2.2.0",
     "ansi-colors": "^4.1.1",
     "fs-extra": "^9.0.0",
-    "json5": "^2.1.3",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.28",
-    "nrf-intel-hex": "^1.3.0",
     "reflect-metadata": "^0.1.13",
     "serialport": "^8.0.7",
     "source-map-support": "^0.5.19",
