refactor: extract the serial port (including logging) into its own package (#876)
* feat: extract the serial port into its own package [WIP]

* refactor: extract serial module [WIP]

* test: throw unhandled rejections during testing

* feat(serial): expose mocked version of the serial port

* fix: import from serial package

* test: fix tests

* refactor: move serial logging to @zwave-js/serial

* chore: fix a bunch of imports and missing/extraneous deps

* fix(deps): use the same winston version everywhere

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,17 +28,17 @@
 		"**/coverage/": true,
 		"**/*.map": true,
 		"**/zwave-js-*.tgz": true,
-		"cache": true,
+		"cache": false,
 		"build": false,
-		"*.d.ts": true,
-		"*.map": true,
-		"CommandClass.js": true,
-		"Controller.js": true,
-		"Driver.js": true,
-		"Error.js": true,
-		"Node.js": true,
-		"Values.js": true,
-		"index.js": true,
+		"*.d.ts": false,
+		"*.map": false,
+		"CommandClass.js": false,
+		"Controller.js": false,
+		"Driver.js": false,
+		"Error.js": false,
+		"Node.js": false,
+		"Values.js": false,
+		"index.js": false,
 		"packages/core/Capabilities.js": false,
 		"packages/core/Consts.js": false,
 		"packages/core/Error.js": false,
@@ -50,7 +50,7 @@
 		"packages/core/index.js": false,
 		"**/build": true,
 		"**/*.tsbuildinfo": true,
-		"Utils.js": true,
+		"Utils.js": false,
 		"packages/core/Capabilities.d.ts": false,
 		"packages/core/Consts.d.ts": false,
 		"packages/core/Error.d.ts": false,
@@ -75,7 +75,24 @@
 		"packages/zwave-js/Values.d.ts": true,
 		"packages/zwave-js/Values.js": true,
 		"packages/zwave-js/index.d.ts": true,
-		"packages/zwave-js/index.js": true
+		"packages/zwave-js/index.js": true,
+		"node_modules/zwave-js/CommandClass.d.ts": true,
+		"node_modules/zwave-js/CommandClass.js": true,
+		"node_modules/zwave-js/Controller.d.ts": true,
+		"node_modules/zwave-js/Controller.js": true,
+		"node_modules/zwave-js/Driver.d.ts": true,
+		"node_modules/zwave-js/Driver.js": true,
+		"node_modules/zwave-js/Error.d.ts": true,
+		"node_modules/zwave-js/Error.js": true,
+		"node_modules/zwave-js/Node.d.ts": true,
+		"node_modules/zwave-js/Node.js": true,
+		"node_modules/zwave-js/Utils.d.ts": true,
+		"node_modules/zwave-js/Utils.js": true,
+		"node_modules/zwave-js/Values.d.ts": true,
+		"node_modules/zwave-js/Values.js": true,
+		"node_modules/zwave-js/index.d.ts": true,
+		"node_modules/zwave-js/index.js": true,
+		"**/cache": true
 	},
 	"files.associations": {
 		"**/config/**/*.json": "jsonc"
