--- a/packages/serial/package.json
+++ b/packages/serial/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@zwave-js/config",
-  "version": "1.0.0",
-  "description": "zwave-js: configuration files",
+  "name": "@zwave-js/serial",
+  "version": "3.8.5",
+  "description": "zwave-js: Serialport driver",
   "keywords": [],
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -26,18 +26,13 @@
   },
   "dependencies": {
     "@zwave-js/core": "file:../core",
-    "@zwave-js/shared": "file:../shared",
     "alcalzone-shared": "^2.2.0",
-    "ansi-colors": "^4.1.1",
-    "fs-extra": "^9.0.0",
-    "json5": "^2.1.3",
+    "serialport": "^9.0.0",
     "winston": "^3.2.1"
   },
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
     "clean": "npm run build -- --clean",
-    "watch": "npm run build -- --watch --pretty",
-    "lint:config": "gulp lintConfigFiles",
-    "config": "ts-node maintenance/importConfig.ts"
+    "watch": "npm run build -- --watch --pretty"
   }
 }
