--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -1,9 +1,9 @@
 path_classifiers:
   generated:
-    - "build/**/*.*"
+    - "**/build/**/*.*"
     - "**/*.d.ts"
     - "**/*.js"
   test:
     - exclude: /
     - test
-    - "src/**/*.test.ts"
+    - "packages/**/src/**/*.test.ts"
