--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -169,7 +169,7 @@ jobs:
       run: npm install
 
     - name: Create a clean build
-      run: npx lerna gulp build
+      run: npx lerna run build
 
     - name: Publish package to npm
       run: |
