--- a/packages/serial/package.json
+++ b/packages/serial/package.json
@@ -2,6 +2,9 @@
   "name": "@zwave-js/serial",
   "version": "4.0.0",
   "description": "zwave-js: Serialport driver",
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [],
   "main": "build/index.js",
   "types": "build/index.d.ts",
