--- a/packages/serial/package.json
+++ b/packages/serial/package.json
@@ -8,6 +8,9 @@
   "keywords": [],
   "main": "build/index.js",
   "types": "build/index.d.ts",
+  "files": [
+    "build/**/*.{js,d.ts,map}"
+  ],
   "author": {
     "name": "AlCalzone",
     "email": "d.griesel@gmx.net"
