--- a/packages/zwave-js/package.json
+++ b/packages/zwave-js/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "types": "index.d.ts",
   "files": [
+    "build/**/*.{js,d.ts,map}",
     "CommandClass.d.ts",
     "CommandClass.d.ts.map",
     "CommandClass.js",
