fix(ci): allow running the deploy step for annotated tags

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -6,43 +6,17 @@ name: Test and Release
 # Run this job on all pushes and pull requests
 # as well as tags with a semantic version
 on:
-    push:
-        branches:
-            - "*"
-        tags:
-          # normal versions
-          - "v[0-9]+.[0-9]+.[0-9]+"
-          # pre-releases
-          - "v[0-9]+.[0-9]+.[0-9]+-**"
-    pull_request: {}
+  push:
+    branches:
+      - "*"
+    tags:
+      # normal versions
+      - "v[0-9]+.[0-9]+.[0-9]+"
+      # pre-releases
+      - "v[0-9]+.[0-9]+.[0-9]+-**"
+  pull_request: {}
 
 jobs:
-  debug:
-    runs-on: ubuntu-latest
-    steps:
-      - name: debug deploy step
-        env:
-          MESSAGE: ${{ github.event.head_commit.message }}
-          CONTAINS_SKIP: ${{ contains(github.event.head_commit.message, '[skip ci]') }}
-          EVENT_NAME: ${{ github.event_name }}
-          EVENT_NAME_IS_PUSH: ${{ github.event_name == 'push' }}
-          BASE_REF: ${{ github.event.base_ref }}
-          BASE_REF_IS_MASTER: ${{ github.event.base_ref == 'refs/heads/master' }}
-          REF: ${{ github.ref }}
-          REF_IS_TAG: ${{ startsWith(github.ref, 'refs/tags/v') }}
-          DEPLOY_CONDITION: ${{ contains(github.event.head_commit.message, '[skip ci]') == false && github.event_name == 'push' && github.event.base_ref == 'refs/heads/master' && startsWith(github.ref, 'refs/tags/v') }}
-        run: |
-          echo "message:          $MESSAGE"
-          echo "contains skip ci: $CONTAINS_SKIP"
-          echo "event name:       $EVENT_NAME"
-          echo "is push event:    $EVENT_NAME_IS_PUSH"
-          echo "base ref:         $BASE_REF"
-          echo "is master branch: $BASE_REF_IS_MASTER"
-          echo "ref:              $REF"
-          echo "is versioned tag: $REF_IS_TAG"
-          echo "---------------------------------------------"
-          echo "deploy condition: $DEPLOY_CONDITION"
-    
   build:
     if: contains(github.event.head_commit.message, '[skip ci]') == false
 
@@ -156,10 +130,11 @@ jobs:
   # Deploys the final package to NPM
   deploy:
     # Trigger this step only when a commit on master is tagged with a version number
+    # or for annotated tags (which have no base branch)
     if: |
       contains(github.event.head_commit.message, '[skip ci]') == false &&
       github.event_name == 'push' &&
-      github.event.base_ref == 'refs/heads/master' &&
+      (github.event.base_ref == 'refs/heads/master' || github.event.base_ref == '') &&
       startsWith(github.ref, 'refs/tags/v')
 
     needs: [unit-tests]
