fix(build): publish only changed packages

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -175,7 +175,7 @@ jobs:
       run: |
         npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
         npm whoami
-        npx lerna publish from-git --yes
+        npx lerna publish from-package --yes
 
     - name: Create Github Release
       uses: actions/create-release@v1
