refactor: treating NIF as successful ping happens in the send queue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"typescript.tsdk": "node_modules\\typescript\\lib",
+	"typescript.tsdk": "node_modules/typescript/lib",
 	"typescript.enablePromptUseWorkspaceTsdk": true,
 	"jest.showCoverageOnLoad": true,
 	"jest.enableCodeLens": true,
@@ -97,5 +97,10 @@
 	"files.associations": {
 		"**/config/**/*.json": "jsonc"
 	},
-	"editor.rulers": [72, 80, 120]
+	"editor.rulers": [
+		72,
+		80,
+		120
+	],
+	"files.participants.timeout": 10000
 }
