fix: resolve correct transaction when pre transmit handshake succeeds

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,7 +42,7 @@
 				"${workspaceFolder}/test/run.ts"
 			],
 			"env": {
-				// "NO_CACHE": "true",
+				"NO_CACHE": "true",
 				// "LOGLEVEL": "verbose"
 			},
 			"console": "integratedTerminal",
