Rewrite the communication interface to state machines (#896)

--- a/packages/zwave-js/package.json
+++ b/packages/zwave-js/package.json
@@ -73,7 +73,8 @@
     "reflect-metadata": "^0.1.13",
     "serialport": "^8.0.7",
     "source-map-support": "^0.5.19",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "xstate": "^4.11.0"
   },
   "scripts": {
     "build": "gulp build",
