--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "supports-color": "^7.1.0",
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.9.7",
+    "typescript": "^4.1.0-dev.20200807",
     "yargs": "^15.3.1"
   },
   "dependencies": {
