--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "@actions/exec": "^1.0.3",
     "@actions/github": "^2.1.1",
     "@alcalzone/release-script": "^1.6.0",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.1",
+    "@babel/core": "^7.11.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@fimbul/mithotyn": "^0.21.0",
@@ -53,8 +53,8 @@
     "@types/serialport": "^8.0.1",
     "@types/triple-beam": "^1.3.0",
     "@types/yargs": "^15.0.4",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "ansi-colors": "^4.1.1",
     "axios": "^0.19.2",
     "clipboardy": "^2.3.0",
@@ -73,12 +73,12 @@
     "jest-extended": "^0.11.5",
     "lerna": "^3.22.1",
     "mockdate": "^3.0.2",
-    "prettier": "^2.0.5",
+    "prettier": "github:prettier/prettier",
     "semver": "^7.3.2",
     "supports-color": "^7.1.0",
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.9.4",
+    "typescript": "^4.0.2",
     "yargs": "^15.3.1"
   },
   "dependencies": {
