--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "ansi-colors": "^4.1.1",
     "axios": "^0.19.2",
     "clipboardy": "^2.3.0",
-    "commitizen": "^4.0.4",
+    "commitizen": "^4.1.5",
     "coveralls": "^3.1.0",
     "cz-conventional-changelog": "^3.1.0",
     "eslint": "^7.1.0",
@@ -73,7 +73,7 @@
     "jest-extended": "^0.11.5",
     "lerna": "^3.22.1",
     "mockdate": "^3.0.2",
-    "prettier": "github:prettier/prettier",
+    "prettier": "^2.1.0",
     "semver": "^7.3.2",
     "supports-color": "^7.1.0",
     "ts-node": "^8.9.1",
