--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,6 +45,7 @@
 		"strictNullChecks": true,
 		"strictPropertyInitialization": true,
 		"strictBindCallApply": true,
+		"strictFunctionTypes": true,
 		"watch": false, // true breaks CI scripts
 		"pretty": true,
 		"types": [
