--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "@types/serialport": "^8.0.1",
     "@types/triple-beam": "^1.3.1",
     "@types/yargs": "^15.0.5",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "ansi-colors": "^4.1.1",
     "axios": "^0.19.2",
     "clipboardy": "^2.3.0",
@@ -97,9 +97,9 @@
     "coverage": "npm run test:ts -- --collect-coverage",
     "coverage:ci": "npm run test:ci -- --collect-coverage",
     "show-coverage": "npm run coverage && start ./coverage/index.html",
-    "lint:ts": "eslint --ext .ts \"packages/**/src/**\"",
+    "lint:ts": "eslint --ext .ts \"packages/*/src/**\"",
     "lint:wotan": "wotan",
-    "lint": "npm run lint:ts && npm run lint:wotan",
+    "lint": "npm run lint:ts",
     "implemented_ccs": "ts-node maintenance/implemented_ccs.ts",
     "gh-cc-table": "npm run implemented_ccs -- --flavor=github --only-incomplete",
     "usbdebug": "cmd.exe /c \"test\\usbdebug.bat\"",
