perf: don't read the entire value db every time a value is updated

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,47 +19,47 @@
 		}
 	},
 	"files.exclude": {
-		"node_modules/": false,
-		"coverage/": false,
-		".*": false,
+		"node_modules/": true,
+		"coverage/": true,
+		".*": true,
 		"**/node_modules/": true,
 		"**/*.test.js": true,
 		".nyc_output": true,
 		"**/coverage/": true,
 		"**/*.map": true,
 		"**/zwave-js-*.tgz": true,
-		"cache": false,
-		"build": false,
-		"*.d.ts": false,
-		"*.map": false,
-		"CommandClass.js": false,
-		"Controller.js": false,
-		"Driver.js": false,
-		"Error.js": false,
-		"Node.js": false,
-		"Values.js": false,
-		"index.js": false,
-		"packages/core/Capabilities.js": false,
-		"packages/core/Consts.js": false,
-		"packages/core/Error.js": false,
-		"packages/core/Log.js": false,
-		"packages/core/Security.js": false,
-		"packages/core/Test.js": false,
-		"packages/core/Util.js": false,
-		"packages/core/Values.js": false,
-		"packages/core/index.js": false,
+		"cache": true,
+		"build": true,
+		"*.d.ts": true,
+		"*.map": true,
+		"CommandClass.js": true,
+		"Controller.js": true,
+		"Driver.js": true,
+		"Error.js": true,
+		"Node.js": true,
+		"Values.js": true,
+		"index.js": true,
+		"packages/core/Capabilities.js": true,
+		"packages/core/Consts.js": true,
+		"packages/core/Error.js": true,
+		"packages/core/Log.js": true,
+		"packages/core/Security.js": true,
+		"packages/core/Test.js": true,
+		"packages/core/Util.js": true,
+		"packages/core/Values.js": true,
+		"packages/core/index.js": true,
 		"**/build": true,
 		"**/*.tsbuildinfo": true,
-		"Utils.js": false,
-		"packages/core/Capabilities.d.ts": false,
-		"packages/core/Consts.d.ts": false,
-		"packages/core/Error.d.ts": false,
-		"packages/core/Log.d.ts": false,
-		"packages/core/Security.d.ts": false,
-		"packages/core/Test.d.ts": false,
-		"packages/core/Util.d.ts": false,
-		"packages/core/Values.d.ts": false,
-		"packages/core/index.d.ts": false,
+		"Utils.js": true,
+		"packages/core/Capabilities.d.ts": true,
+		"packages/core/Consts.d.ts": true,
+		"packages/core/Error.d.ts": true,
+		"packages/core/Log.d.ts": true,
+		"packages/core/Security.d.ts": true,
+		"packages/core/Test.d.ts": true,
+		"packages/core/Util.d.ts": true,
+		"packages/core/Values.d.ts": true,
+		"packages/core/index.d.ts": true,
 		"packages/zwave-js/CommandClass.d.ts": true,
 		"packages/zwave-js/CommandClass.js": true,
 		"packages/zwave-js/Controller.d.ts": true,
@@ -92,10 +92,16 @@
 		"node_modules/zwave-js/Values.js": true,
 		"node_modules/zwave-js/index.d.ts": true,
 		"node_modules/zwave-js/index.js": true,
-		"**/cache": true
+		"**/cache": true,
+		"packages/zwave-js/**/fingerprint.txt": true,
+		"node_modules/zwave-js/**/fingerprint.txt": true
 	},
 	"files.associations": {
 		"**/config/**/*.json": "jsonc"
 	},
-	"editor.rulers": [72, 80, 120]
+	"editor.rulers": [
+		72,
+		80,
+		120
+	]
 }
