--- a/package.json
+++ b/package.json
@@ -43,24 +43,24 @@
     "@types/fs-extra": "^9.0.1",
     "@types/gulp": "^4.0.6",
     "@types/gulp-sourcemaps": "0.0.32",
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^26.0.12",
     "@types/json5": "0.0.30",
     "@types/mockdate": "^2.0.0",
     "@types/node": "^14.6.0",
-    "@types/prettier": "^2.0.2",
+    "@types/prettier": "^2.1.0",
     "@types/semver": "^7.3.3",
     "@types/serialport": "^8.0.1",
-    "@types/triple-beam": "^1.3.1",
+    "@types/triple-beam": "^1.3.2",
     "@types/yargs": "^15.0.5",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "ansi-colors": "^4.1.1",
     "axios": "^0.19.2",
     "clipboardy": "^2.3.0",
     "commitizen": "^4.1.5",
     "coveralls": "^3.1.0",
     "cz-conventional-changelog": "^3.2.0",
-    "eslint": "^7.7.0",
+    "eslint": "^7.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "gulp": "^4.0.2",
@@ -75,7 +75,7 @@
     "prettier": "^2.1.0",
     "semver": "^7.3.2",
     "supports-color": "^7.1.0",
-    "ts-node": "^8.10.2",
+    "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.2",
     "yargs": "^15.4.1"
@@ -97,7 +97,7 @@
     "coverage": "npm run test:ts -- --collect-coverage",
     "coverage:ci": "npm run test:ci -- --collect-coverage",
     "show-coverage": "npm run coverage && start ./coverage/index.html",
-    "lint:ts": "eslint --ext .ts \"packages/*/src/**\"",
+    "lint:ts": "eslint --ext .ts \"packages/*/src/**/*.ts\"",
     "lint:wotan": "wotan",
     "lint": "npm run lint:ts",
     "implemented_ccs": "ts-node maintenance/implemented_ccs.ts",
