--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "lerna": "^3.22.1",
     "mockdate": "^3.0.2",
     "prettier": "^2.1.0",
+    "prettier-plugin-organize-imports": "^1.1.1",
     "semver": "^7.3.2",
     "supports-color": "^7.1.0",
     "ts-node": "^9.0.0",
