--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
 	"packages": [
 		"packages/*"
 	],
-	"version": "4.2.0",
+	"version": "5.0.0-alpha.0",
 	"command": {
 		"run": {
 			"stream": true
