--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zwave-js/config",
-  "version": "4.2.0",
+  "version": "5.0.0-alpha.0",
   "description": "zwave-js: configuration files",
   "publishConfig": {
     "access": "public"
