--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "supports-color": "^7.1.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.2",
+    "typescript": "^4.1.0-dev.20200909",
     "yargs": "^15.4.1"
   },
   "dependencies": {
