--- a/.github/workflows/cc-bot.yml
+++ b/.github/workflows/cc-bot.yml
@@ -16,13 +16,20 @@ jobs:
         node-version: [12.x]
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+
     - name: Install dependencies
-      run: npm install
+      run: npm ci
+
+    - name: Compile TypeScript code
+      run: npx lerna run build
+
     # The script will check if there are changes before updating the issue
     - name: Update CC table
       uses: ./.github/actions/gh-cc-table
